Change name of index stylesheets and test it works

--- a/styles/index-style-max-width-767px.css
+++ b/styles/index-style-max-width-767px.css
@@ -6,8 +6,10 @@
 
 .cocogoose {
     font-family: 'Cocogoose', sans-serif;
+    font-size: 90px;
 }
 
 .lato {
     font-family: 'Lato', sans-serif;
+    font-size: 90px;
 }
