--- a/styles/index-style-max-width-767px.css
+++ b/styles/index-style-max-width-767px.css
@@ -15,12 +15,12 @@
 
 .cocogoose {
     font-family: 'Cocogoose', sans-serif;
-    font-size: 80px;
+    font-size: 5vw;
 }
 
 .lato {
     font-family: 'Lato', sans-serif;
-    font-size: 80px;
+    font-size: 5vw;
 }
 
 body {
@@ -34,42 +34,49 @@ body {
     justify-content: flex-end;
     align-items: center;
     gap: 20px;
-    padding-right: 10vw;
-    height: 40px;
+    padding-right: 7vw;
+    height: 3.5vh;
     color: white;
     background-color: rgba(80, 80, 80, 0.9);
+    font-size: 2vw;
 }
 
 .social-networks {
     display: flex;
     list-style: none;
     gap: 20px;
+    padding-inline-start: 0;
 }
 
 .social-networks a {
     color: white;
 }
 
+.social-networks i {
+    width: 2vw;
+}
+
 .navbar-bottom {
     display: flex;
     justify-content: space-between;
-    padding-inline-end: 10vw;
+    padding-inline-end: 5vw;
 }
 
 #navbar-logo {
     background-color: green;
-    margin: 0 2vw;
-    height: 70px;
+    margin: 0 1vw;
+    height: auto;
+    width: 30vw;
 }
 
 .navbar-sections {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 30vw;
+    width: 50vw;
     padding-inline-start: 0;
     list-style: none;
-    font-size: 0.8em;
+    font-size: 2vw;
 }
 
 .navbar-sections li a {
@@ -80,9 +87,10 @@ body {
     background-color: white;
     color: orangered;
     border: solid orangered 3px;
-    margin: 10px;
+    margin: 5px;
     white-space: nowrap;
     font-family: 'Cocogoose', sans-serif;
+    font-size: 2vw;
 }
 
 #introduction {
