--- a/styles/index-style-max-width-767px.css
+++ b/styles/index-style-max-width-767px.css
@@ -94,7 +94,6 @@ body {
 }
 
 #introduction {
-    border: solid red;
     font-family: 'Lato', sans-serif;
 }
 
@@ -109,4 +108,68 @@ body {
 
 #title h1 {
     width: 50vw;
+}
+
+#program {
+    background-image: url(../images/darkholes.jpg);
+    background-size: 300vw;
+    background-repeat: no-repeat;
+    background-position: right;
+    background-color: rgb(7, 87, 7);
+    background-blend-mode:hard-light;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    color: white;
+    font-family: 'Lato', sans-serif;
+    padding: 10vw 0;
+}
+
+#program h2 {
+    margin-block-start: 0;
+}
+
+#program ul {
+    list-style: none;
+    padding-inline-start: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+#program li {
+    background-color: rgba(75, 74, 74, 0.7);
+    margin: 2vw 4vw;
+    display: flex;
+    align-items: center;
+    gap: 3vw;
+    padding-left: 2vw;
+}
+
+#program li i {
+    flex: 1;
+    font-size: 7vw;
+    text-align: center;
+}
+
+#program li h3 {
+    flex: 2;
+    color: orangered;
+    font-size: 4vw;
+}
+
+#program li p {
+    flex: 5;
+    font-size: 3vw;
+    line-height: 1.6em;
+}
+
+#join-button {
+    background-color: orangered;
+    color: white;
+    padding: 7vw 14vw;
+    border: none;
+    font-family: 'Lato', sans-serif;
+    font-weight: 600;
+    font-size: 4vw;
 }
