--- a/styles/index-style-max-width-767px.css
+++ b/styles/index-style-max-width-767px.css
@@ -1,230 +1,259 @@
 @font-face {
-    font-family: 'Cocogoose';
-    src: url(../fonts//cocogoose-font/Cocogoose\ Pro\ Light-trial.ttf);
+  font-family: 'Cocogoose';
+  src: url(../fonts//cocogoose-font/Cocogoose\ Pro\ Light-trial.ttf);
 }
 
 @font-face {
-    font-family: 'Cocogoose Italic';
-    src: url(../fonts//cocogoose-font/Cocogoose\ Pro\ Light\ Italic-trial.ttf);
-}
-@font-face {
-    font-family: 'Cocogoose Bold Italic';
-    src: url(../fonts//cocogoose-font/Cocogoose\ Pro\ Italic-trial.ttf);
+  font-family: 'Cocogoose Italic';
+  src: url(../fonts//cocogoose-font/Cocogoose\ Pro\ Light\ Italic-trial.ttf);
 }
 
+@font-face {
+  font-family: 'Cocogoose Bold Italic';
+  src: url(../fonts//cocogoose-font/Cocogoose\ Pro\ Italic-trial.ttf);
+}
 
 .cocogoose {
-    font-family: 'Cocogoose', sans-serif;
-    font-size: 5vw;
+  font-family: 'Cocogoose', sans-serif;
+  font-size: 5vw;
 }
 
 .lato {
-    font-family: 'Lato', sans-serif;
-    font-size: 5vw;
+  font-family: 'Lato', sans-serif;
+  font-size: 5vw;
 }
 
 body {
-    box-sizing: border-box;
-    margin: 0;
-    font-family: 'Cocogoose', sans-serif;
+  box-sizing: border-box;
+  margin: 0;
+  font-family: 'Cocogoose', sans-serif;
 }
 
 .navbar-top {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    gap: 20px;
-    padding-right: 7vw;
-    height: 3.5vh;
-    color: white;
-    background-color: rgba(80, 80, 80, 0.9);
-    font-size: 2vw;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 20px;
+  padding-right: 7vw;
+  height: 3.5vh;
+  color: white;
+  background-color: rgba(80, 80, 80, 0.9);
+  font-size: 2vw;
 }
 
 .social-networks {
-    display: flex;
-    list-style: none;
-    gap: 20px;
-    padding-inline-start: 0;
+  display: flex;
+  list-style: none;
+  gap: 20px;
+  padding-inline-start: 0;
 }
 
 .social-networks a {
-    color: white;
+  color: white;
 }
 
 .social-networks i {
-    width: 2vw;
+  width: 2vw;
 }
 
 .navbar-bottom {
-    display: flex;
-    justify-content: space-between;
-    padding-inline-end: 5vw;
+  display: flex;
+  justify-content: space-between;
+  padding-inline-end: 5vw;
 }
 
 #navbar-logo {
-    background-color: green;
-    margin: 0 1vw;
-    height: auto;
-    width: 30vw;
+  background-color: green;
+  margin: 0 1vw;
+  height: auto;
+  width: 30vw;
 }
 
 .navbar-sections {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 50vw;
-    padding-inline-start: 0;
-    list-style: none;
-    font-size: 2vw;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 50vw;
+  padding-inline-start: 0;
+  list-style: none;
+  font-size: 2vw;
 }
 
 .navbar-sections li a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
 #at-campaign {
-    background-color: white;
-    color: orangered;
-    border: solid orangered 3px;
-    margin: 5px;
-    white-space: nowrap;
-    font-family: 'Cocogoose', sans-serif;
-    font-size: 2vw;
+  background-color: white;
+  color: orangered;
+  border: solid orangered 3px;
+  margin: 5px;
+  white-space: nowrap;
+  font-family: 'Cocogoose', sans-serif;
+  font-size: 2vw;
 }
 
 #introduction {
-    font-family: 'Lato', sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 #title {
-    background-image: url(../images/farm-tractor.jpg);
-    background-position: center;
-    background-size: cover;
-    background-repeat: no-repeat;
-    padding: 10vw;
-    color: white;
+  background-image: url(../images/farm-tractor.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 10vw;
+  color: white;
 }
 
 #title h1 {
-    width: 50vw;
+  width: 50vw;
 }
 
 #program {
-    background-image: url(../images/darkholes.jpg);
-    background-size: 300vw;
-    background-repeat: no-repeat;
-    background-position: right;
-    background-color: rgb(7, 87, 7);
-    background-blend-mode:hard-light;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100vw;
-    color: white;
-    font-family: 'Lato', sans-serif;
-    padding: 10vw 0;
+  background-image: url(../images/darkholes.jpg);
+  background-size: 300vw;
+  background-repeat: no-repeat;
+  background-position: right;
+  background-color: rgb(7, 87, 7);
+  background-blend-mode: hard-light;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100vw;
+  color: white;
+  font-family: 'Lato', sans-serif;
+  padding: 10vw 0;
 }
 
 #program h2 {
-    margin-block-start: 0;
+  margin-block-start: 0;
 }
 
 #program ul {
-    list-style: none;
-    padding-inline-start: 0;
-    display: flex;
-    flex-direction: column;
+  list-style: none;
+  padding-inline-start: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 #program li {
-    background-color: rgba(75, 74, 74, 0.7);
-    margin: 2vw 4vw;
-    display: flex;
-    align-items: center;
-    gap: 3vw;
-    padding-left: 2vw;
+  background-color: rgba(75, 74, 74, 0.7);
+  margin: 2vw 4vw;
+  display: flex;
+  align-items: center;
+  gap: 3vw;
+  padding-left: 2vw;
 }
 
 #program li i {
-    flex: 1;
-    font-size: 7vw;
-    text-align: center;
+  flex: 1;
+  font-size: 7vw;
+  text-align: center;
 }
 
 #program li h3 {
-    flex: 2;
-    color: orangered;
-    font-size: 4vw;
+  flex: 2;
+  color: orangered;
+  font-size: 4vw;
 }
 
 #program li p {
-    flex: 5;
-    font-size: 3vw;
-    line-height: 1.6em;
+  flex: 5;
+  font-size: 3vw;
+  line-height: 1.6em;
 }
 
 #join-button {
-    background-color: orangered;
-    color: white;
-    padding: 7vw 14vw;
-    border: none;
-    font-family: 'Lato', sans-serif;
-    font-weight: 600;
-    font-size: 4vw;
+  background-color: orangered;
+  color: white;
+  padding: 7vw 14vw;
+  border: none;
+  font-family: 'Lato', sans-serif;
+  font-weight: 600;
+  font-size: 4vw;
 }
 
 #speakers {
-    padding: 4vw;
+  padding: 4vw;
 }
 
 #speakers h2 {
-    text-align: center;
-    font-size: 5vw;
-    margin-bottom: 4vh;
+  text-align: center;
+  font-size: 5vw;
+  margin-bottom: 4vh;
 }
 
 .speaker-card {
-    display: flex;
-    margin-bottom: 3vh;
+  display: flex;
+  margin-bottom: 3vh;
 }
 
 .speaker-left {
-    flex: 5;
+  flex: 5;
 }
 
 .speaker-thumbnail {
-    background-image: url(../images/chessboard.jpg);
-    background-repeat: no-repeat;
-    background-size: 12vw;
-    background-position: top left;
-    padding: 3vw 0px 0px 3vw;
+  background-image: url(../images/chessboard.jpg);
+  background-repeat: no-repeat;
+  background-size: 12vw;
+  background-position: top left;
+  padding: 3vw 0 0 3vw;
 }
 
 .speaker-thumbnail img {
-    width: 22.5vw;
+  width: 22.5vw;
 }
 
 .speaker-right {
-    flex: 10;
-    display: flex;
-    flex-direction: column;
-    padding-inline-start: 3vw;
-    font-family: 'Lato', sans-serif;
+  flex: 10;
+  display: flex;
+  flex-direction: column;
+  padding-inline-start: 3vw;
+  font-family: 'Lato', sans-serif;
 }
 
 .speaker-name {
-    margin-top: 0;
-    font-size: 3vw;
+  margin-top: 0;
+  font-size: 3vw;
 }
 
 .speaker-job {
-    margin-top: 0;
-    color: orangered;
-    font-size: 2.5vw;
+  margin-top: 0;
+  color: orangered;
+  font-size: 2.5vw;
 }
 
 .speaker-bio {
-    margin-top: 0;
-    font-size: 2vw;
+  margin-top: 0;
+  font-size: 2vw;
+}
+
+#partners {
+  background-color: rgb(97, 96, 96);
+  padding-top: 3vh;
+  padding-bottom: 5vh;
+}
+
+#partners h3 {
+  text-align: center;
+  font-family: 'Lato', sans-serif;
+  font-size: 5vw;
+  color: white;
+  margin: 0;
+}
+
+#companies {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 20px;
+    padding-inline-start: 0;
+    margin: 0;
+    padding: 5vw;
+}
+
+#companies img {
+    width: 25vw;
 }
