--- a/styles/index-style-max-width-767px.css
+++ b/styles/index-style-max-width-767px.css
@@ -152,7 +152,7 @@ body {
   text-align: center;
 }
 
-#program li h3 {
+#program h3 {
   flex: 2;
   color: orangered;
   font-size: 4vw;
@@ -244,16 +244,16 @@ body {
 }
 
 #companies {
-    list-style: none;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 20px;
-    padding-inline-start: 0;
-    margin: 0;
-    padding: 5vw;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 20px;
+  padding-inline-start: 0;
+  margin: 0;
+  padding: 5vw;
 }
 
 #companies img {
-    width: 25vw;
+  width: 25vw;
 }
