--- a/styles/index-style-max-width-767px.css
+++ b/styles/index-style-max-width-767px.css
@@ -287,7 +287,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 20px;
+  align-items: center;
+  gap: 5.5vw 6vw;
   padding-inline-start: 0;
   margin: 0;
   padding: 5vw;
