--- a/styles/index-style-max-width-767px.css
+++ b/styles/index-style-max-width-767px.css
@@ -278,7 +278,7 @@ body {
   text-align: center;
   font-family: 'Lato', sans-serif;
   font-size: 5vw;
-  color: white;
+  color: #b0b0b0;
   margin: 0;
 }
 
@@ -296,4 +296,42 @@ body {
 
 #companies img {
   width: 25vw;
+}
+
+footer {
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-family: 'Lato', sans-serif;
+}
+
+#atlogo-white {
+  display: none;
+}
+
+#atlogo-black {
+  width: 40vw;
+}
+
+.footer-left {
+  width: fit-content;
+  padding: 5vw;
+}
+
+.footer-right {
+  width: 46vw;
+  padding: 2vw;
+}
+
+.footer-right h4 {
+  font-size: 2.1vw;
+  line-height: 3vw;
+  margin: 5px 0;
+}
+
+#service-email,
+#service-phone {
+  font-size: 2vw;
+  margin: 0;
 }
