--- a/styles/index-style-min-width-768px.css
+++ b/styles/index-style-min-width-768px.css
@@ -13,6 +13,16 @@
   font-size: 90px;
 }
 
+.toggleNav {
+  display: none;
+}
+
+.navbar {
+  position: initial;
+  height: auto;
+  background: white;
+}
+
 .navbar-top {
   display: flex;
   justify-content: flex-end;
@@ -23,6 +33,8 @@
   color: white;
   background-color: rgba(80, 80, 80, 0.9);
   font-size: 2vw;
+  width: initial;
+  height: 40px;
 }
 
 .social-networks {
@@ -32,6 +44,7 @@
   padding-inline-start: 0;
   margin-block-end: 0;
   margin-block-start: 0;
+  font-size: 2.5vw;
 }
 
 .social-networks a {
@@ -44,8 +57,9 @@
 
 .navbar-bottom {
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  padding-inline-end: 5vw;
+  padding-inline-end: 0vw;
 }
 
 #navbar-logo {
@@ -62,19 +76,30 @@
   width: 50vw;
   padding-inline-start: 0;
   list-style: none;
-  font-size: 2vw;
+}
+
+.navbar-sections li {
+  margin: 0;
 }
 
 .navbar-sections li a {
   text-decoration: none;
+  font-size: 2vw;
+  font-family: 'Cocogoose', sans-serif;
 }
 
 #at-campaign {
   background-color: white;
   color: orangered;
   border: solid orangered 3px;
+  border-radius: 0;
   margin: 5px;
   white-space: nowrap;
   font-family: 'Cocogoose', sans-serif;
   font-size: 2vw;
+  padding: 1vw 2vw;
+}
+
+.navbar-sections .close {
+  display: none;
 }
