--- a/styles/index-style-max-width-767px.css
+++ b/styles/index-style-max-width-767px.css
@@ -210,7 +210,7 @@ body {
 
 #program h3 {
   flex: 2;
-  color: orangered;
+  color: #43a127;
   font-size: 4vw;
 }
 
@@ -221,7 +221,7 @@ body {
 }
 
 #join-button {
-  background-color: orangered;
+  background-color: #43a127;
   color: white;
   padding: 7vw 14vw;
   border: none;
@@ -276,7 +276,7 @@ body {
 
 .speaker-job {
   margin-top: 0;
-  color: orangered;
+  color: #43a127;
   font-size: 2.5vw;
 }
 
