--- a/styles/index-style-min-width-768px.css
+++ b/styles/index-style-min-width-768px.css
@@ -3,16 +3,6 @@
   src: url(../fonts//cocogoose-font/Cocogoose\ Pro\ Light-trial.ttf);
 }
 
-.cocogoose {
-  font-family: 'Cocogoose', sans-serif;
-  font-size: 90px;
-}
-
-.lato {
-  font-family: 'Lato', sans-serif;
-  font-size: 90px;
-}
-
 .toggleNav {
   display: none;
 }
@@ -29,12 +19,11 @@
   align-items: center;
   gap: 20px;
   padding-right: 7vw;
-  height: 3.5vh;
+  height: 6vh;
   color: white;
   background-color: rgba(80, 80, 80, 0.9);
-  font-size: 2vw;
+  font-size: 1.4vw;
   width: initial;
-  height: 40px;
 }
 
 .social-networks {
@@ -44,7 +33,8 @@
   padding-inline-start: 0;
   margin-block-end: 0;
   margin-block-start: 0;
-  font-size: 2.5vw;
+  font-size: 2vw;
+  width: 10vw;
 }
 
 .social-networks a {
@@ -58,22 +48,22 @@
 .navbar-bottom {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   padding-inline-end: 0vw;
 }
 
 #navbar-logo {
   background-color: green;
-  margin: 0 1vw;
+  margin: 0 0 0 5vw;
   height: auto;
-  width: 30vw;
+  width: 20vw;
 }
 
 .navbar-sections {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 50vw;
+  width: 40vw;
   padding-inline-start: 0;
   list-style: none;
 }
@@ -84,7 +74,7 @@
 
 .navbar-sections li a {
   text-decoration: none;
-  font-size: 2vw;
+  font-size: 1.2vw;
   font-family: 'Cocogoose', sans-serif;
 }
 
@@ -94,10 +84,11 @@
   border: solid orangered 3px;
   border-radius: 0;
   margin: 5px;
+  margin-right: 5vw;
   white-space: nowrap;
   font-family: 'Cocogoose', sans-serif;
-  font-size: 2vw;
-  padding: 1vw 2vw;
+  font-size: 1.2vw;
+  padding: 0.7vw 1.5vw;
 }
 
 .navbar-sections .close {
