--- a/styles/index-style-min-width-768px.css
+++ b/styles/index-style-min-width-768px.css
@@ -159,3 +159,71 @@
 #program a {
   display: initial;
 }
+
+#speakers {
+  display: grid;
+  grid-template-columns: 4fr 4fr;
+  grid-template-rows:  10vw 16vw 16vw 16vw 6vw;
+  padding: 4vw 10vw;
+}
+
+#speakers h2 {
+  grid-column: 1/3;
+  grid-row: 1/2;
+  font-size: 2vw;
+}
+
+.speaker-card {
+  padding-right: 3vw;
+}
+
+#card-1 {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+
+#card-2 {
+  grid-column: 1/2;
+  grid-row: 3/4;
+}
+
+#card-3 {
+  grid-column: 1/2;
+  grid-row: 4/5;
+}
+
+#card-4 {
+  grid-column: 2/3;
+  grid-row: 2/3;
+}
+
+#card-5 {
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+
+#card-6 {
+  grid-column: 2/3;
+  grid-row: 4/5;
+}
+
+.speaker-thumbnail {
+  background-size: 8vw;
+  padding: 1.5vw 0 0 1.5vw;
+}
+
+.speaker-thumbnail img {
+  width: 10vw;
+}
+
+.speaker-name {
+  font-size: 2vw;
+}
+
+.speaker-job {
+  font-size: 1vw;
+}
+
+.speaker-bio {
+  font-size: 1vw;
+}
