--- a/styles/about-style-max-width-767px.css
+++ b/styles/about-style-max-width-767px.css
@@ -155,3 +155,31 @@ body {
   margin: 4vw;
   color: rgb(83, 83, 83);
 }
+
+#logo-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 8vw;
+}
+
+#logo-info h2 {
+  text-align: center;
+  font-family: 'Lato', sans-serif;
+  font-size: 6vw;
+  width: 70vw;
+  margin: 0 0 5vw 0;
+}
+
+#logo-info p {
+  text-align: center;
+  font-family: 'Lato', sans-serif;
+  font-size: 3vw;
+  line-height: 1.2rem;
+  width: 75vw;
+  margin: 0 0 5vw 0;
+}
+
+.logo-display {
+  border: solid black 1px;
+}
