--- a/styles/about-style-max-width-767px.css
+++ b/styles/about-style-max-width-767px.css
@@ -17,6 +17,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   font-family: 'Cocogoose', sans-serif;
+  background-color: #b0b0b0;
 }
 
 .toggleNav {
@@ -154,6 +155,7 @@ body {
   background-color: transparent;
   margin: 4vw;
   color: rgb(83, 83, 83);
+  text-align: center;
 }
 
 #logo-info {
@@ -161,6 +163,8 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 8vw;
+  background-color: white;
+  margin-bottom: 1px;
 }
 
 #logo-info h2 {
@@ -188,6 +192,8 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: white;
+  padding: 8vw 0;
 }
 
 #past-summits h2 {
