Style about intro section for desktop

--- a/styles/about-style-max-width-767px.css
+++ b/styles/about-style-max-width-767px.css
@@ -151,6 +151,10 @@ body {
   color: rgb(63, 63, 63);
 }
 
+#introduction .end-title {
+  display: none;
+}
+
 .contact-message {
   background-color: transparent;
   margin: 4vw;
