--- a/styles/about-style-min-width-768px.css
+++ b/styles/about-style-min-width-768px.css
@@ -1,12 +1,150 @@
-.cocogoose {
-  font-size: 80px;
-  color: blue;
+@font-face {
+  font-family: 'Cocogoose';
+  src: url(../fonts//cocogoose-font/Cocogoose\ Pro\ Light-trial.ttf);
 }
 
-.lato {
-  font-size: 80px;
-  color: blue;
+.toggleNav {
+  display: none;
 }
+
+.navbar {
+  position: initial;
+  height: auto;
+  background: white;
+}
+
+.navbar-top {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 20px;
+  padding-right: 7vw;
+  height: 6vh;
+  color: white;
+  background-color: rgba(80, 80, 80, 0.9);
+  font-size: 1.4vw;
+  width: initial;
+}
+
+.social-networks {
+  display: flex;
+  list-style: none;
+  gap: 20px;
+  padding-inline-start: 0;
+  margin-block-end: 0;
+  margin-block-start: 0;
+  font-size: 2vw;
+  width: 10vw;
+}
+
+.social-networks a {
+  color: white;
+}
+
+.social-networks i {
+  width: 2vw;
+}
+
+.navbar-bottom {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding-inline-end: 0;
+}
+
+#navbar-logo {
+  background-color: green;
+  margin: 0 0 0 5vw;
+  height: auto;
+  width: 20vw;
+}
+
+.navbar-sections {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 40vw;
+  padding-inline-start: 0;
+  list-style: none;
+}
+
+.navbar-sections li {
+  margin: 0;
+}
+
+.navbar-sections li a {
+  text-decoration: none;
+  font-size: 1.2vw;
+  font-family: 'Cocogoose', sans-serif;
+}
+
+#at-campaign {
+  background-color: white;
+  color: orangered;
+  border: solid orangered 3px;
+  border-radius: 0;
+  margin: 5px;
+  margin-right: 5vw;
+  white-space: nowrap;
+  font-family: 'Cocogoose', sans-serif;
+  font-size: 1.2vw;
+  padding: 0.7vw 1.5vw;
+}
+
+.navbar-sections .close {
+  display: none;
+}
+
+#title {
+  padding: 2vw 5vw;
+}
+
+#title h1 {
+  margin: 0;
+  width: 60vw;
+  font-size: 5vw;
+}
+
+#title h2 {
+  display: none;
+}
+
+#introduction {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding-bottom: 2vw;
+}
+
+#introduction .intro-message {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 4vw;
+  border: solid #b0b0b0 2px;
+}
+
+#introduction p {
+  background-color: initial;
+  width: 70vw;
+  font-size: 1.4vw;
+  line-height: normal;
+  padding: 0;
+  margin: 0;
+  border: none;
+}
+
+#introduction .end-title {
+  display: initial;
+}
+
+.contact-message {
+  display: flex;
+  flex-direction: column;
+}
+
 
 
 
