--- a/styles/index-style-min-width-768px.css
+++ b/styles/index-style-min-width-768px.css
@@ -80,8 +80,8 @@
 
 #at-campaign {
   background-color: white;
-  color: orangered;
-  border: solid orangered 3px;
+  color: #43a127;
+  border: solid #43a127 3px;
   border-radius: 0;
   margin: 5px;
   margin-right: 5vw;
