Hide partners section in about page

--- a/styles/about-style-min-width-768px.css
+++ b/styles/about-style-min-width-768px.css
@@ -204,20 +204,11 @@
 #summit-2011 p {
   font-size: 1.5vw;
   margin-bottom: 2vw;
-
 }
 
-
-
-
-
-
-
-
-
-
-
-
+#partners {
+display: none;
+}
 
 #service-email,
 #service-phone {
