Adjust size and color of display-logo

--- a/styles/about-style-max-width-767px.css
+++ b/styles/about-style-max-width-767px.css
@@ -193,7 +193,11 @@ body {
 }
 
 .logo-display {
-  border: solid black 1px;
+  border: solid #b0b0b0 1px;
+}
+
+.logo-display img {
+  width: 85vw;
 }
 
 #past-summits {
