Add grey background to body to 'separate' sections

--- a/styles/about-style-max-width-767px.css
+++ b/styles/about-style-max-width-767px.css
@@ -17,6 +17,7 @@ body {
   box-sizing: border-box;
   margin: 0;
   font-family: 'Cocogoose', sans-serif;
+  background-color: #b0b0b0;
 }
 
 .toggleNav {
