Establish global color var, and change to orange

--- a/styles/about-style-max-width-767px.css
+++ b/styles/about-style-max-width-767px.css
@@ -13,6 +13,13 @@
   src: url(../fonts//cocogoose-font/Cocogoose\ Pro\ Italic-trial.ttf);
 }
 
+:root {
+  --orange: #ec5242;
+  --lightgray: #d3d3d3;
+  --darkgray: #4c505a;
+  --whitefuzz: #c1c1c1;
+}
+
 body {
   box-sizing: border-box;
   margin: 0;
@@ -26,7 +33,7 @@ body {
 }
 
 .toggleNav:hover {
-  background-color: #b0b0b0;
+  background-color: var(--whitefuzz);
 }
 
 .navbar-sections .close {
@@ -48,7 +55,7 @@ body {
   gap: 0.8rem;
   position: fixed;
   top: -100%;
-  background: linear-gradient(#fff 25%, rgb(63, 134, 45) 85%, #444 100%);
+  background: linear-gradient(#fff 25%, var(--orange) 85%, var(--darkgray) 100%);
   margin-block-start: 0;
   padding-inline-start: 0;
   transition: top 1.5s ease-out;
@@ -96,13 +103,13 @@ body {
   font-size: 4vh;
   text-decoration: none;
   font-family: 'Cocogoose Bold Italic', sans-serif;
-  color: rgb(44, 26, 87);
+  color: black;
 }
 
 #at-campaign {
-  background-color: #222;
-  color: rgb(41, 121, 148);
-  border: solid rgb(41, 121, 148) 3px;
+  background-color: var(--darkgray);
+  color: var(--orange);
+  border: solid var(--orange) 3px;
   border-radius: 20px;
   margin: 5px;
   white-space: nowrap;
@@ -119,7 +126,7 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  background-color: rgb(196, 196, 196);
+  background-color: var(--whitefuzz);
   background-blend-mode: screen;
   padding-bottom: 8vw;
 }
@@ -132,6 +139,8 @@ body {
   width: 80vw;
   background-image: url(../images/farm-birdview.jpg);
   background-position: 5%;
+  background-color: var(--orange);
+  background-blend-mode: screen;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 7vw;
@@ -140,20 +149,22 @@ body {
 #title h2 {
   background-image: url(../images/farm-birdview.jpg);
   background-position: 5%;
+  background-color: var(--orange);
+  background-blend-mode: screen;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 5vw;
 }
 
 #introduction p {
-  background-color: rgba(236, 236, 236, 0.548);
+  background-color: rgba(236, 236, 236, 0.4);
   border: solid white 2px;
   margin: 4vw;
   padding: 5vw;
   font-size: 3.5vw;
   line-height: 7vw;
   font-family: 'Cocogoose', sans-serif;
-  color: rgb(63, 63, 63);
+  color: var(--darkgray);
   text-align: center;
 }
 
@@ -167,7 +178,7 @@ body {
   width: 70vw;
   background-color: transparent;
   margin: 4vw;
-  color: rgb(83, 83, 83);
+  color: var(--darkgray);
   text-align: center;
   align-self: center;
   font-size: 4vw;
@@ -203,7 +214,7 @@ body {
 }
 
 .logo-display {
-  border: solid #b0b0b0 1px;
+  border: solid var(--lightgray) 1px;
 }
 
 .logo-display img {
@@ -243,8 +254,8 @@ body {
   justify-content: center;
   padding: 10vw 0;
   margin: 2vw;
-  background-color: #43a127;
-  background-blend-mode: color-burn;
+  background-color: var(--orange);
+  background-blend-mode:multiply;
   color: white;
 }
 
@@ -271,7 +282,7 @@ body {
 }
 
 #partners {
-  background-color: rgb(97, 96, 96);
+  background-color: var(--darkgray);
   padding-top: 3vh;
 }
 
@@ -279,7 +290,7 @@ body {
   text-align: center;
   font-family: 'Lato', sans-serif;
   font-size: 5vw;
-  color: #b0b0b0;
+  color: var(--lightgray);
   margin: 0;
 }
 
