--- a/styles/about-style-min-width-768px.css
+++ b/styles/about-style-min-width-768px.css
@@ -83,7 +83,7 @@
   margin: 0;
 }
 
-.navbar-sections li a {
+.navbar-sections a {
   text-decoration: none;
   font-size: 1.2vw;
   font-family: 'Cocogoose', sans-serif;
